--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.modelinglab</groupId>
         <artifactId>general-parent</artifactId>
-        <version>1.0.8</version>
+        <version>2</version>
     </parent>
     
     <groupId>org.modelinglab.utils</groupId>
@@ -15,7 +15,8 @@
     <packaging>jar</packaging>
     
     <scm>
-        <developerConnection>scm:svn:svn+ssh://software.imdea.org/srv/svn/mda/code/maven/main-tools/utils/doc/trunk</developerConnection>
+        <developerConnection>scm:git:ssh://github.com/modelinglab/doc-utils.git</developerConnection>
+        <connection>scm:git:https://github.com/modelinglab/doc-utils.git</connection>
     </scm>
   
     <dependencies>
